# bachelor-gameLogic

./: README.md  environment.yml  pyproject.toml
logic/: test.py
logic/game/chasing_game/: chasing_game.py  chasing_game_base.py  combat.py  command.py  command_type.py  initialize.py
logic/game/comp_chasing_game/: change_position.py  combat.py  command.py  comp_chasing_game.py  comp_chasing_game_base.py  exchange_position.py  initialize.py
logic/game/several_units_game/: change_turn.py  initialize.py  several_units_game.py
logic/game/share/: change_turn.py  checked_change_turn.py  game_base.py  get_random_positions.py  invalid_command_error.py  random.py  reset_movement.py  set_movement.py  unit_type.py
logic/map/: FieldType.py  field.py  field_type.py  find_next_fields.py  map.py  terrain_type.py
logic/map/coordinates/: axial_to_evenr.py  build_coords.py  evenr_to_axial.py  get_playable_fields.py  map_to_axial.py  valid_coord.py  valid_coords.py
logic/map/geometry/: a_star.py  calculate_distance.py  directions.py  expand_area.py  find_circumference.py  find_direction.py  find_direction_field.py  find_hex_line.py  find_ring.py  find_valid_circumference.py  get_strided_mask.py  make_get_neighbors.py  perimeter_index_to_xy.py
test/: test_random.py
test/game/chasing_game/: test_combat.py  test_command.py
test/game/comp_chasing_game/: test_generate_forest.py  test_generate_hills.py  test_rules.py  test_rules_several_units.py
test/game/several_units/: test_generate_units.py
test/game/share/: test_random.py
test/map/coordinates/: test_axial_to_evenr.py  (+2 more)
(+21 files in other folders)
