[project]
name = "game-logic"
version = "0.1.0"
dependencies = [
    "mypy==1.16.0",
    "numpy==2.2.6",
    "numba==0.61.2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
exclude = ["build", "dist", "venv"]
