[project]
name = "game-logic"
version = "0.1.1"
dependencies = [
    "mypy==1.16.0",
    "numpy==1.24.4",
    "numba==0.57.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.12.11"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
exclude = ["build", "dist", "venv"]
